# qautomata

./: .gitignore  235.js  9a0c3efdaa8e5359.module.wasm  Cargo.toml  README.md  index.js
.github/workflows/: build.yaml  deploy.yaml  lint.yaml  test.yaml
cli/: Cargo.toml
cli/src/cmd/: gen.rs  mod.rs  run.rs
core/: Cargo.toml
core/fixtures/: state1.json  state2.json  state_2_adjacent_cells.json
core/src/: engine.rs  main.rs
core/src/cmd/: gen.rs
core/src/universe/: combined_state.rs  interference.rs  measure.rs  mod.rs  step.rs  types.rs
fixtures/: state_2_diagonal_cells.json  state_grid_20.json
src/: engine.rs  gui.rs  main.rs  universe.rs
src/cmd/: run.rs
src/gui/: grid.rs
src/universe/: files.rs  interference.rs  measure.rs  step.rs  step_calculator.rs  types.rs
ui/: Cargo.toml  README.md
ui/js/: index.js
ui/src/: lib.rs  main.rs  sketch.rs
web/: Cargo.toml  README.md  package-lock.json  package.json
web/src/: main.rs
web/static/: index.html
