[package]
name = "qautomata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
num = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0.0"}
bevy = "0.7.0"
sha2 = "0.10.6"
base16ct = { version = "0.1.1", features = ["alloc"] }
